adicionado tela de produto

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -418,6 +418,10 @@ table {
   margin: 0.2em;
 }
 
+.table td.productData {
+  vertical-align: middle;
+}
+
 .table tr.selected {
   color: #fff;
   background-color: #2ecc71;
