--- a/public/css/app.css
+++ b/public/css/app.css
@@ -680,6 +680,10 @@ table {
   margin: 0.2em;
 }
 
+.table td.productData {
+  vertical-align: middle;
+}
+
 .table tr.selected {
   color: #fff;
   background-color: #2ecc71;
