--- a/resources/views/layout.ejs
+++ b/resources/views/layout.ejs
@@ -45,6 +45,7 @@
           <li class="ml-6"><a href="/">Menu</a></li>
           <li class="ml-6"><a href="/admin/orders">Pedidos</a></li>
           <li class="ml-6"><a href="/admin/clients">Clientes</a></li>
+          <li class="ml-6"><a href="/admin/products">Produtos</a></li>
           <li class="ml-6">
             <form id="logout" action="/logout" method="POST">
               <a onclick="document.getElementById('logout').submit()" href="#"
