--- a/resources/views/admin/clients.ejs
+++ b/resources/views/admin/clients.ejs
@@ -6,7 +6,7 @@
         id="addClientBtn"
         name="addClientBtn"
         type="button"
-        onclick="handleClientForm.reset()"
+        onclick="handleClientForm.reset();$('.form-control').removeClass('success error');$('small').text('');$('.small-message').text('')"
       >
         + Adicionar Cliente
       </button>
@@ -129,8 +129,8 @@
       <div class="modalinputs">
         <div class="inputModal">
           <!--Body-->
-
-          <form name="handleClientForm" id="handleClientForm">
+          <%- include('./clientForm.ejs') %>
+          <!-- <form name="handleClientForm" id="handleClientForm">
             <input id="id" name="id" value="" style="display: none" />
             <div class="firstline">
               <div class="form-control">
@@ -300,7 +300,7 @@
               Salvar
             </button>
             <button type="button" class="modal-close">Fechar</button>
-          </form>
+          </form> -->
         </div>
       </div>
       <!--Footer-->
