--- a/resources/views/customers/cart.ejs
+++ b/resources/views/customers/cart.ejs
@@ -75,58 +75,67 @@
       <% } %>
     </div>
     <hr />
-    <div class="text-right py-4">
-      <div class="justify-between grid-cols-2 align-center m-0">
-        <div>
-          <span class="text-lg font-bold">Total do pedido:</span>
-          <span id="amount" class="amount text-2xl font-bold ml-2"
-            >R$ <%= session.cart.totalPrice %></span
+    <div class="flex justify-between">
+      <div class="flex flex-col py-4">
+        <span class="text-lg font-bold ml-0 mr-aut">Observações</span>
+        <textarea class="h-24 flex-1"></textarea>
+      </div>
+      <div class="text-right py-4">
+        <div class="justify-between grid-cols-2 align-center m-0">
+          <div>
+            <span class="text-lg font-bold">Total do pedido:</span>
+            <span id="amount" class="amount text-2xl font-bold ml-2 mr-0"
+              >R$ <%= session.cart.totalPrice %></span
+            >
+          </div>
+        </div>
+
+        <div class="paymentMethod">
+          <select
+            id="paymentMethod"
+            name="paymentMethod"
+            class="
+              ml-auto
+              mr-0
+              bg-white
+              border border-gray-400
+              hover:border-gray-500
+              mb-4
+              px-4
+              py-2
+              pr-8
+              rounded
+              leading-tight
+              focus:outline-none
+              focus:shadow-outline
+            "
           >
+            <option value="currency">Pagar em dinheiro</option>
+            <option value="credit-card">Pagar com cartão</option>
+          </select>
+        </div>
+        <div id="currencyChange" class="currencyChange flex flex-col">
+          <span class="text-lg color-primary"
+            >Precisa de troco? pra quanto?</span
+          >
+          <span class="text-sm mb-4">Se não precisa, só deixar em branco.</span>
+          <input
+            class="
+              ml-auto
+              mr-0
+              border border-gray-400
+              px-12
+              py-2
+              w-1/4
+              rounded-md
+            "
+            type="text"
+            placeholder="R$ 0,00"
+          />
         </div>
       </div>
-
-      <div class="paymentMethod">
-        <select
-          id="paymentMethod"
-          name="paymentMethod"
-          class="
-            ml-auto
-            mr-0
-            bg-white
-            border border-gray-400
-            hover:border-gray-500
-            mb-4
-            px-4
-            py-2
-            pr-8
-            rounded
-            leading-tight
-            focus:outline-none
-            focus:shadow-outline
-          "
-        >
-          <option value="currency">Pagar em dinheiro</option>
-          <option value="credit-card">Pagar com cartão</option>
-        </select>
-      </div>
-      <div id="currencyChange" class="currencyChange flex flex-col">
-        <span class="text-lg color-primary">Precisa de troco? pra quanto?</span>
-        <span class="text-sm mb-4">Se não precisa, só deixar em branco.</span>
-        <input
-          class="
-            ml-auto
-            mr-0
-            border border-gray-400
-            px-12
-            py-2
-            w-1/4
-            rounded-md
-          "
-          type="text"
-          placeholder="R$ 0,00"
-        />
-      </div>
     </div>
+
     <% if(user) { %>
     <div>
       <form
