--- a/resources/views/home.ejs
+++ b/resources/views/home.ejs
@@ -25,26 +25,33 @@
     <% })%>
   </h1>
   <div
-    class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 col-gap-12 row-gap-16"
+    class="
+      grid grid-cols-1
+      md:grid-cols-2
+      lg:grid-cols-3
+      xl:grid-cols-4
+      col-gap-12
+      row-gap-16
+    "
   >
     <% products.forEach(function (product){%>
     <div class="w-full md:w-64">
       <img class="h-40 mb-4 mx-auto" src="/img/<%= product.image %>" alt="" />
       <div class="text-center">
         <h2 class="mb-4 text-lg"><%= product.name %></h2>
-        <% product.sizes.forEach(function (size){%>
+        <% product.saleSizes.forEach(function (saleSize){%>
+        <span class="font-bold text-lg">R$ <%= saleSize.price %></span>
         <button
           type="button"
-          data-product="<%= JSON.stringify(product)
-              %>"
-          id="<%= size %>"
+          data-product="<%= saleSize.saleSize %>"
+          id="<%= saleSize.saleSize %>"
           class="size py-1 px-4 rounded-full uppercase text-xs"
         >
-          <%= size %>
+          <%= saleSize.saleSize %>
         </button>
+
         <% })%>
         <div class="flex flex-col tems-center justify-around mt-1">
-          <span class="font-bold text-lg">R$ <%= product.price %></span>
           <button
             data-product="<%= JSON.stringify(product)%>"
             class="add-to-cart py-1 px-6 rounded-full mx-8 my-4 font-bold"
