--- a/resources/views/layout.ejs
+++ b/resources/views/layout.ejs
@@ -23,6 +23,7 @@
     />
     <link rel="stylesheet" href="/css/app.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
   </head>
 
   <body>
@@ -94,7 +95,20 @@
     <script src="/js/searchUser.js"></script>
     <script src="/js/hideElements.js"></script>
     <script src="/js/validate.js"></script>
-
+    <script>
+      $(document).ready(function () {
+        $('.date').mask('11/11/1111');
+        $('.time').mask('00:00:00');
+        $('.date_time').mask('00/00/0000 00:00:00');
+        $('.cep').mask('00000-000');
+        $('.phone').mask('0000-0000');
+        $('.phone_with_ddd').mask('(00) 0000-0000');
+        $('.phone_us').mask('(000) 000-0000');
+        $('.mixed').mask('AAA 000-S0S');
+        $('.cpf').mask('000.000.000-00', { reverse: true });
+        $('.money').mask('000.000.000.000.000,00', { reverse: true });
+      });
+    </script>
     <!-- <script src="../js/validate.js"></script> -->
   </body>
 </html>
