alteração no carrinho para digitar quantidade

--- a/resources/views/auth/register.ejs
+++ b/resources/views/auth/register.ejs
@@ -16,7 +16,7 @@
           Nome
         </label>
         <input
-          name="name"
+          name="username"
           value="<%= messages.name  %>"
           class="
             shadow
