ajustes no carrinho

--- a/resources/views/admin/products.ejs
+++ b/resources/views/admin/products.ejs
@@ -66,10 +66,7 @@
           <td class="productData">
             <% product.saleSizes.forEach(function (saleSize){%>
             <div>
-              <button
-                type="button"
-                class="size px-4 mx-4 rounded-full uppercase text-xs"
-              >
+              <button type="button" class="size px-4 mx-4 rounded-full text-xs">
                 <%= saleSize.saleSize %>
               </button>
 
