--- a/resources/views/customers/cart.ejs
+++ b/resources/views/customers/cart.ejs
@@ -99,17 +99,12 @@
           >
           <span class="text-sm mb-4">Se não precisa, só deixar em branco.</span>
           <input
-            class="
-              ml-auto
-              mr-0
-              border border-gray-400
-              px-12
-              py-2
-              w-1/4
-              rounded-md
-            "
-            type="text"
-            placeholder="R$ 0,00"
+          name="needChange"
+          form="orderForm"
+          class="border border-gray-400 rounded-md pl-6 px-2 py-2 w-1/2 mr-0 ml-auto"
+          type="number"
+          placeholder="R$ 0,00"
+          max="200"
           />
         </div>
       </div>
