--- a/resources/views/layout.ejs
+++ b/resources/views/layout.ejs
@@ -93,6 +93,7 @@
     <script src="/js/app.js"></script>
     <script src="/js/searchzipcode.js"></script>
     <script src="/js/searchUser.js"></script>
+    <script src="/js/searchProduct.js"></script>
     <script src="/js/hideElements.js"></script>
     <script src="/js/validate.js"></script>
     <script>
