--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -359,6 +359,10 @@ section.status {
   visibility: visible;
 }
 
+.fa-edit {
+  color: #65ee4d;
+  visibility: visible;
+}
 .form-control small {
   color: #e74c3c;
   position: absolute;
@@ -442,13 +446,38 @@ body.modal-active {
   height: 34px;
 }
 
+.switch-small {
+  position: relative;
+  display: inline-block;
+  width: 30px;
+  height: 17px;
+}
+
 .switch input {
   opacity: 0;
   width: 0;
   height: 0;
 }
 
+.switch-small input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
 .slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.slider-small {
   position: absolute;
   cursor: pointer;
   top: 0;
@@ -472,11 +501,31 @@ body.modal-active {
   transition: 0.4s;
 }
 
+.slider-small:before {
+  position: absolute;
+  content: '';
+  height: 10px;
+  width: 10px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
 input:checked + .slider {
   background-color: #65ee4d;
 }
 
+input:checked + .slider-small {
+  background-color: #65ee4d;
+}
+
 input:focus + .slider {
+  box-shadow: 0 0 1px #65ee4d;
+}
+
+input:focus + .slider-small {
   box-shadow: 0 0 1px #65ee4d;
 }
 
@@ -491,7 +540,15 @@ input:checked + .slider:before {
   border-radius: 34px;
 }
 
+.slider-small.round-small {
+  border-radius: 34px;
+}
+
 .slider.round:before {
+  border-radius: 50%;
+}
+
+.slider-small.round-small:before {
   border-radius: 50%;
 }
 
