--- a/resources/views/home.ejs
+++ b/resources/views/home.ejs
@@ -40,7 +40,8 @@
       <div class="text-center">
         <h2 class="mb-4 text-lg"><%= product.name %></h2>
         <div class="flex flex-row justify-evenly">
-          <% product.saleUnits.forEach(function (saleUnit){%>
+          <% product.saleUnits.forEach(function (saleUnit) { if (saleUnit.active
+          == true) {%>
           <div class="flex flex-col">
             <span class="font-bold text-lg"
               ><%= saleUnit.price.toLocaleString('pt-BR', { style: 'currency',
@@ -55,7 +56,7 @@
               <%= saleUnit.saleUnit %>
             </button>
           </div>
-          <% })%>
+          <% }})%>
         </div>
 
         <input
