--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -342,6 +342,7 @@ section.status {
   display: inline-block;
   margin-bottom: 5px;
 }
+
 .form-control i {
   visibility: hidden;
   position: absolute;
@@ -362,6 +363,15 @@ section.status {
 .fa-edit {
   color: #65ee4d;
   visibility: visible;
+}
+
+i.fa-trash-alt {
+  color: #65ee4d;
+  visibility: visible;
+  position: relative;
+  top: 0;
+  outline: none;
+  font-size: 1.6rem;
 }
 .form-control small {
   color: #e74c3c;
